# bvh

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  codecov.yml  justfile  release.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: Cargo.toml  plot.py
benches/src/: main.rs
bvh/: Cargo.toml
bvh-f64/: Cargo.toml
bvh-lib/: Cargo.toml
bvh-lib/src/: lib.rs
dynbvh-f32/: Cargo.toml
dynbvh-f64/: Cargo.toml
examples/: simple.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz.rs
src/: aabb.rs  axis.rs  ball.rs  bounding_hierarchy.rs  bvh.rs  flat_bvh.rs  lib.rs  main.rs  point_query.rs  ray.rs  shapes.rs  testbase.rs  utils.rs
src/aabb/: aabb_impl.rs  intersection.rs  mod.rs
src/bvh/: best_first.rs  bucket.rs  bvh.rs  bvh_impl.rs  bvh_node.rs  child_distance_traverse.rs  distance_traverse.rs  iter.rs  mod.rs  optimization.rs  ordered_traverse.rs  qbvh.rs
src/mesh/: convex_hull.rs  mod.rs
src/ray/: intersect_default.rs  intersect_simd.rs  intersect_x86_64.rs  mod.rs  ray_impl.rs
src/shapes/: aabb.rs  capsule.rs  mod.rs  obb.rs  ray.rs  sphere.rs  triangle.rs
