[package]
name = "bvh"
description = "A fast BVH using SAH"
version = "0.11.0"
edition = "2021"
rust-version = "1.65" # may raise to versions that are at least 1y old.
authors = [
    "Sven-Hendrik Haase <svenstaro@gmail.com>",
    "Alexander Dmitriev <alexander.dmitriev2580@gmail.com>",
    "Marios Staikopoulos <marstaik@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/svenstaro/bvh"
documentation = "https://docs.rs/crate/bvh"
keywords = ["bvh", "bounding", "volume", "sah", "aabb"]
license = "MIT"

[dependencies]
log = { optional = true, version = "0.4" }
nalgebra = { version = "0.33.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false, features = ["std"] }
rayon = { optional = true, version = "1.8.1" }
serde = { optional = true, version = "1", features = ["derive"] }
wide = { version = "0.7.32", optional = true }

[dev-dependencies]
approx = "0.5"
doc-comment = "0.3"
float_eq = "1"
nalgebra = "0.33.0"
num = "0.4.3"
obj-rs = "0.7"
proptest = "1.0"
rand = "0.9"

[features]
bench = []
default = ["rayon"]
serde = ["dep:serde", "nalgebra/serde-serialize"]
simd = ["wide"]

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
