[package]
name = "bvh"
description = "A fast BVH using SAH"
version = "0.11.0"
edition = "2021"
rust-version = "1.65" # may raise to versions that are at least 1y old.
authors = [
    "Sven-Hendrik Haase <svenstaro@gmail.com>",
    "Alexander Dmitriev <alexander.dmitriev2580@gmail.com>",
    "Marios Staikopoulos <marstaik@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/svenstaro/bvh"
documentation = "https://docs.rs/crate/bvh"
keywords = ["bvh", "bounding", "volume", "sah", "aabb"]
license = "MIT"

[dependencies]
serde = { optional = true, version = "1", features = ["derive"] }
num-traits = "0.2.19"
nalgebra = { version = "0.33.0", features = ["default", "serde-serialize"] }
rayon = { optional = true, version = "1.8.1" }
wide = { optional = true, version = "0.7.32" }
hashbrown = { version = "0.15.4" }
once_cell = { version = "1.21.3", features = [
    "alloc",
], default-features = false, optional = true }
spin = { version = "0.10.0", optional = true }

[dev-dependencies]
num = "0.4.3"
proptest = "1.0"
obj-rs = "0.7"
rand = "0.9"
float_eq = "1"
doc-comment = "0.3"

[features]
default = ["std", "rayon"]
std = []
no_std = ["dep:once_cell", "dep:spin"]
bench = []
simd = ["wide"]

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
