[package]
name = "bvh"
description = "A fast BVH using SAH"
version = "0.11.0"
edition = "2024"
rust-version = "1.87" # may raise to versions that are at least 1y old.
authors = [
    "Sven-Hendrik Haase <svenstaro@gmail.com>",
    "Alexander Dmitriev <alexander.dmitriev2580@gmail.com>",
    "Marios Staikopoulos <marstaik@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/svenstaro/bvh"
documentation = "https://docs.rs/crate/bvh"
keywords = ["bvh", "bounding", "volume", "sah", "aabb"]
license = "MIT"

[dependencies]
serde = { optional = true, version = "1", features = ["derive"] }
num-traits = "0.2.19"
nalgebra = { version = "0.34.0", features = ["default", "serde-serialize"] }
rayon = { optional = true, version = "1.8.1" }
wide = { optional = true, version = "0.8" }

[dev-dependencies]
num = "0.4.3"
proptest = "1.0"
obj-rs = "0.7"
rand = "0.9"
float_eq = "1"
doc-comment = "0.3"

[features]
default = ["std", "rayon"]
std = []
bench = []
simd = ["wide"]

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
