[package]
name = "bvh-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bvh = { path = "../bvh" }
bvh-f64 = { path = "../bvh-f64" }
interoptopus = "0.13.12"
interoptopus_backend_csharp = "0.13.12"
flexi_logger = "0.19.3"
log-panics = "2.0.0"
log = "0.4.14"
glam = "0.20"

[lib]
name="bvh_lib"
crate-type = ["rlib", "dylib"]
